--- a/print/latexmk/Makefile
+++ b/print/latexmk/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.21 2022/06/28 11:35:29 wiz Exp $
+# $NetBSD: Makefile,v 1.22 2024/12/17 19:28:58 riastradh Exp $
 
-DISTNAME=	latexmk-463b
-PKGREVISION=	4
+DISTNAME=	latexmk-465
 CATEGORIES=	print
 MASTER_SITES=	http://users.phys.psu.edu/~collins/software/latexmk/
 EXTRACT_SUFX=	.zip
