--- a/x11/xst/Makefile
+++ b/x11/xst/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.7 2023/11/12 13:24:42 wiz Exp $
+# $NetBSD: Makefile,v 1.8 2024/12/17 20:09:24 pin Exp $
 
-DISTNAME=	xst-0.9.0
-PKGREVISION=	1
+DISTNAME=	xst-0.10.0
 CATEGORIES=	x11
 MASTER_SITES=	${MASTER_SITE_GITHUB:=gnotclub/}
 GITHUB_TAG=	v${PKGVERSION_NOREV}
