--- a/inputmethod/ibus-table/Makefile
+++ b/inputmethod/ibus-table/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.30 2023/10/23 06:37:46 wiz Exp $
+# $NetBSD: Makefile,v 1.31 2024/12/18 01:46:06 maya Exp $
 
 DISTNAME=	ibus-table-1.9.2
 PKGREVISION=	7
@@ -24,7 +24,8 @@ SUBST_FILES.prefix=	engine/tabcreatedb.py
 SUBST_SED.prefix=	-e 's|/usr/share|${PREFIX}/share|g'
 
 REPLACE_PYTHON+=		engine/tabcreatedb.py
-PYTHON_VERSIONS_INCOMPATIBLE=	27
+# Needs 'imp' removed in 3.12
+PYTHON_VERSIONS_ACCEPTED=	310 311
 
 .include "../../lang/python/batteries-included.mk"
 .include "../../lang/python/application.mk"
