--- a/devel/tevent/Makefile
+++ b/devel/tevent/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.21 2024/01/31 17:43:16 adam Exp $
+# $NetBSD: Makefile,v 1.22 2024/12/18 10:58:03 nros Exp $
 
 DISTNAME=	tevent-0.16.1
+PKGREVISION=	1
 CATEGORIES=	devel
 MASTER_SITES=	https://www.samba.org/ftp/tevent/
 
