--- a/net/netatalk4/Makefile
+++ b/net/netatalk4/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.5 2024/12/16 17:34:45 hauke Exp $
+# $NetBSD: Makefile,v 1.6 2024/12/18 10:58:03 nros Exp $
 
 GITHUB_PROJECT=	netatalk
 GITHUB_TAG=	refs/tags/${DISTNAME}
@@ -6,7 +6,7 @@ DISTNAME=	netatalk-4-0-6
 
 PKGVER=		${GITHUB_TAG:C/^.+netatalk-//:C/-/./g}
 PKGNAME=	${DISTNAME:C/-[0-9].*$//}-${PKGVER}
-PKGREVISION=	2
+PKGREVISION=	3
 CATEGORIES=	net
 MASTER_SITES=	${MASTER_SITE_GITHUB:=Netatalk/}
 
