--- a/misc/vym/Makefile
+++ b/misc/vym/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.86 2024/11/14 22:20:54 wiz Exp $
+# $NetBSD: Makefile,v 1.87 2024/12/18 12:31:30 nia Exp $
 
 DISTNAME=		vym-2.9.31
-PKGREVISION=		3
+PKGREVISION=		4
 CATEGORIES=		misc
 MASTER_SITES=		${MASTER_SITE_GITHUB:=insilmaril/}
 GITHUB_TAG=		da30b21109544ee0596ebf4d9738b5fed69b3cc4
@@ -16,7 +16,9 @@ DEPENDS+=		unzip-[0-9]*:../../archivers/unzip
 DEPENDS+=		zip-[0-9]*:../../archivers/zip
 
 USE_LANGUAGES=		c c++
-USE_TOOLS+=		bash:run pkg-config gmake gzip
+USE_TOOLS+=		bash:run pkg-config gmake
+
+MANCOMPRESSED=		yes
 
 REPLACE_BASH+=		scripts/vivym
 
@@ -30,31 +32,6 @@ SUBST_STAGE.flags=	pre-configure
 SUBST_MESSAGE.flags=	Fix path to flags
 SUBST_FILES.flags=	src/main.cpp src/mainwindow.cpp
 SUBST_VARS.flags=	PREFIX
-
-SUBST_CLASSES+=		man-gz
-SUBST_STAGE.man-gz=	pre-configure
-SUBST_MESSAGE.man-gz=	Fix installing gzipped man page
-SUBST_FILES.man-gz=	CMakeLists.txt
-SUBST_SED.man-gz=	-e 's;doc/vym.1.gz;doc/vym.1;g'
-
-# 'CMAKE_CONFIGURE_ARGS+=	-DCMAKE_INSTALL_MANDIR=man/man1' seems to be ignored
-SUBST_CLASSES+=			cmake-mandir
-SUBST_STAGE.cmake-mandir=	pre-configure
-SUBST_MESSAGE.cmake-mandir=	Fix man page path
-SUBST_FILES.cmake-mandir=	CMakeLists.txt
-SUBST_SED.cmake-mandir=		-e 's;\$${CMAKE_INSTALL_MANDIR};$$\{CMAKE_INSTALL_PREFIX\}/man/man1;g'
-
-SUBST_CLASSES+=		man-bin
-SUBST_STAGE.man-bin=	post-build
-SUBST_MESSAGE.man-bin=	Fixing bin path in man page
-SUBST_FILES.man-bin=	doc/vym.1
-SUBST_SED.man-bin=	-e 's;/usr/bin/;${PREFIX}/bin/;g'
-
-SUBST_CLASSES+=		man-doc
-SUBST_STAGE.man-doc=	post-build
-SUBST_MESSAGE.man-doc=	Fixing doc path in man page
-SUBST_FILES.man-doc=	doc/vym.1
-SUBST_SED.man-doc=	-e 's;/usr/share/doc/packages/vym;${PREFIX}/share/doc/vym;g'
 
 SUBST_CLASSES+=		pdf-path
 SUBST_STAGE.pdf-path=	pre-configure
@@ -71,9 +48,6 @@ CMAKE_CONFIGURE_ARGS+=		-DCMAKE_INSTALL_DATADIR=share/vym
 CMAKE_CONFIGURE_ARGS+=		-DCMAKE_INSTALL_DATAROOTDIR=share/vym
 CMAKE_CONFIGURE_ARGS+=		-DCMAKE_INSTALL_DOCDIR=share/doc/vym
 #CMAKE_CONFIGURE_ARGS+=		-DCMAKE_INSTALL_MANDIR=man/man1
-
-post-extract:
-	${GZIP_CMD} -d ${WRKSRC}/doc/vym.1.gz
 
 .include "../../devel/cmake/build.mk"
 .include "../../graphics/hicolor-icon-theme/buildlink3.mk"
