--- a/devel/p5-Alien-Build/Makefile
+++ b/devel/p5-Alien-Build/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.39 2024/11/16 12:03:37 wiz Exp $
+# $NetBSD: Makefile,v 1.40 2024/12/19 01:23:39 gutteridge Exp $
 
 DISTNAME=	Alien-Build-2.84
 PKGNAME=	p5-${DISTNAME}
-PKGREVISION=	1
+PKGREVISION=	2
 CATEGORIES=	devel perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=../../authors/id/P/PL/PLICEASE/}
 
