--- a/www/php-piwigo/Makefile
+++ b/www/php-piwigo/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.8 2020/01/26 17:32:22 rillig Exp $
+# $NetBSD: Makefile,v 1.9 2024/12/20 14:35:01 manu Exp $
 #
 
-PWVER=		2.9.1
+PWVER=		15.1.0
 DISTNAME=	piwigo-${PWVER}
 PKGNAME=	${PHP_PKG_PREFIX}-${DISTNAME}
 CATEGORIES=	www
