--- a/devel/mise/Makefile
+++ b/devel/mise/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.52 2024/12/19 09:43:57 pin Exp $
+# $NetBSD: Makefile,v 1.53 2024/12/21 16:32:06 pin Exp $
 
 DISTNAME=		mise-2024.12.14
+# Newer versions require Rust >= 1.82
 CATEGORIES=		devel
 MASTER_SITES=		${MASTER_SITE_GITHUB:=jdx/}
 GITHUB_TAG=		v${PKGVERSION_NOREV}
