--- a/lang/python312/Makefile
+++ b/lang/python312/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.23 2024/12/06 06:19:12 riastradh Exp $
+# $NetBSD: Makefile,v 1.24 2024/12/24 10:13:40 wiz Exp $
 
-PKGREVISION=	1
+PKGREVISION=	2
 .include "dist.mk"
 
 PKGNAME=	python312-${PY_DISTVERSION}
