--- a/textproc/p5-YAML-Tiny/Makefile
+++ b/textproc/p5-YAML-Tiny/Makefile
@@ -1,9 +1,8 @@
-# $NetBSD: Makefile,v 1.36 2024/11/16 12:07:14 wiz Exp $
+# $NetBSD: Makefile,v 1.37 2024/12/24 10:59:49 wiz Exp $
 
-DISTNAME=	YAML-Tiny-1.74
+DISTNAME=	YAML-Tiny-1.76
 PKGNAME=	p5-${DISTNAME}
-PKGREVISION=	2
-CATEGORIES=	perl5 textproc
+CATEGORIES=	textproc perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=YAML/}
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
