--- a/textproc/py-types-yaml/Makefile
+++ b/textproc/py-types-yaml/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.8 2024/11/11 07:29:10 wiz Exp $
+# $NetBSD: Makefile,v 1.9 2024/12/24 17:50:29 adam Exp $
 
-DISTNAME=	types-PyYAML-6.0.12.20240917
-PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/PyYAML/yaml/}
+DISTNAME=	types_pyyaml-6.0.12.20241221
+PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/_/-/}
 CATEGORIES=	textproc python
 MASTER_SITES=	${MASTER_SITE_PYPI:=t/types-PyYAML/}
 
@@ -9,6 +9,8 @@ MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	https://github.com/python/typeshed
 COMMENT=	Typing stubs for PyYAML
 LICENSE=	apache-2.0
+
+WHEEL_NAME=	${DISTNAME:S/pyyaml/PyYAML/}
 
 TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools-[0-9]*:../../devel/py-setuptools
 
