--- a/sysutils/py-psutil/Makefile
+++ b/sysutils/py-psutil/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.55 2024/11/11 07:28:59 wiz Exp $
+# $NetBSD: Makefile,v 1.56 2024/12/24 17:55:29 adam Exp $
 
-DISTNAME=	psutil-6.1.0
+DISTNAME=	psutil-6.1.1
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	sysutils python
 MASTER_SITES=	${MASTER_SITE_PYPI:=p/psutil/}
