--- a/databases/mysql80-client/Makefile
+++ b/databases/mysql80-client/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.21 2024/11/14 22:19:03 wiz Exp $
+# $NetBSD: Makefile,v 1.22 2024/12/24 18:52:22 adam Exp $
 
 PKGNAME=	${DISTNAME:S/-/-client-/}
-PKGREVISION=	3
 COMMENT=	MySQL 8, a free SQL database (client)
 
 CONFLICTS=	mysql3-client-[0-9]* mariadb-client-[0-9]*
