--- a/databases/mysql80-client/Makefile.common
+++ b/databases/mysql80-client/Makefile.common
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile.common,v 1.13 2024/08/29 14:42:13 ryoon Exp $
+# $NetBSD: Makefile.common,v 1.14 2024/12/24 18:52:22 adam Exp $
 #
 # used by databases/mysql80-client/Makefile
 # used by databases/mysql80-server/Makefile
 
-DISTNAME=	mysql-8.0.39
+DISTNAME=	mysql-8.0.40
 CATEGORIES=	databases
 MASTER_SITES=	https://cdn.mysql.com/Downloads/MySQL-8.0/
 DISTFILES=	mysql-boost-${PKGVERSION_NOREV}${EXTRACT_SUFX}
@@ -15,7 +15,8 @@ LICENSE=	gnu-gpl-v2
 DISTINFO_FILE?=	${.CURDIR}/../../databases/mysql80-client/distinfo
 PATCHDIR?=	${.CURDIR}/../../databases/mysql80-client/patches
 
-USE_LANGUAGES=		c c++14
+USE_CXX_FEATURES=	c++14
+USE_LANGUAGES=		c c++
 USE_TOOLS+=		bash bison gmake perl:run pkg-config
 USE_GCC_RUNTIME=	yes
 USE_BUILTIN.libevent=	no
