--- a/databases/mysql80-server/Makefile
+++ b/databases/mysql80-server/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.29 2024/12/03 15:04:54 jperkin Exp $
+# $NetBSD: Makefile,v 1.30 2024/12/24 18:52:22 adam Exp $
 
 PKGNAME=	${DISTNAME:S/-/-server-/}
-PKGREVISION=	4
 COMMENT=	MySQL 8, a free SQL database (server)
 
 CONFLICTS=	mysql3-server-[0-9]*
