--- a/time/py-juliandate/Makefile
+++ b/time/py-juliandate/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.2 2024/11/11 07:29:12 wiz Exp $
+# $NetBSD: Makefile,v 1.3 2024/12/24 22:12:17 adam Exp $
 
-DISTNAME=	juliandate-1.0.4
+DISTNAME=	juliandate-1.0.5
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
-CATEGORIES=	time
+CATEGORIES=	time python
 MASTER_SITES=	${MASTER_SITE_PYPI:=j/juliandate/}
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
@@ -10,7 +10,7 @@ HOMEPAGE=	https://github.com/seanredmond/juliandate
 COMMENT=	Python module for Julian date conversions
 LICENSE=	gnu-gpl-v3
 
-TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools-[0-9]*:../../devel/py-setuptools
+TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools>=42:../../devel/py-setuptools
 
 USE_LANGUAGES=	# none
 
