--- a/www/p5-CGI-Compile/Makefile
+++ b/www/p5-CGI-Compile/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.30 2024/11/16 12:07:28 wiz Exp $
+# $NetBSD: Makefile,v 1.31 2024/12/25 01:29:27 wen Exp $
 
-DISTNAME=	CGI-Compile-0.26
+DISTNAME=	CGI-Compile-0.27
 PKGNAME=	p5-${DISTNAME}
-PKGREVISION=	1
 CATEGORIES=	www perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=CGI/}
 
