--- a/devel/p5-Tie-Cycle/Makefile
+++ b/devel/p5-Tie-Cycle/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.19 2024/11/16 12:05:27 wiz Exp $
+# $NetBSD: Makefile,v 1.20 2024/12/25 01:32:11 wen Exp $
 
-DISTNAME=	Tie-Cycle-1.227
+DISTNAME=	Tie-Cycle-1.228
 PKGNAME=	p5-${DISTNAME}
-PKGREVISION=	2
 CATEGORIES=	devel
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=Tie/}
 
