--- a/devel/p5-Test-utf8/Makefile
+++ b/devel/p5-Test-utf8/Makefile
@@ -1,9 +1,8 @@
-# $NetBSD: Makefile,v 1.13 2024/11/16 12:05:25 wiz Exp $
+# $NetBSD: Makefile,v 1.14 2024/12/25 01:34:32 wen Exp $
 #
 
-DISTNAME=		Test-utf8-1.02
+DISTNAME=		Test-utf8-1.03
 PKGNAME=		p5-${DISTNAME}
-PKGREVISION=		5
 CATEGORIES=		devel perl5
 MASTER_SITES=		${MASTER_SITE_PERL_CPAN:=Test/}
 
