pcaudiolib: update to 1.3.
Merge pull request #30 from espeak-ng/rel-1.3

release 1.3
Merge pull request #29 from DataTriny/oss-close-device

Fix OSS device never getting closed
Merge pull request #25 from barracuda156/darwin

Fix headers for macOS
Merge pull request #21 from brad0/oss_cleanup
Cleanup header checks for OSS

OpenBSD no longer uses OSS so remove the soundcard.h header check.
FreeBSD / NetBSD / DragonFly / Linux all use sys/soundcard.h.
Merge pull request #20 from codeofdusk/build-on-macos
Check-in Mac fixes
Merge pull request #18 from zment4/master
Copy audio buffer and send for playback without blocking, fixes Windows audio choppyness
Fix latency-related buffer sizing

Turns out that eSpeak-NG (the main user of this lib) enforces a minimum
buffer size of 60ms which is also the default size. This explains why
smaller LATENCY values were inducing choppiness in the audio on some
systems. Adjust the comment accordingly,.

Also make sure computed buffer sizes don't land in the middle of a
sample frame. Doing (samplerate * channels * LATENCY) / 1000 is wrong.

Both ALSA and PulseAudio provide nice abstractions for buffer sizing
so let's use them directly. In the ALSA case in particular, we want the
period to be 60ms, not the whole buffer, so to interleave speech audio
computation and audio playback.
Fix audio choppiness on some systems

Commit a41d46e816d2 ("Fix cancellation snappiness") made espeak unusable
on the RaspberryPi due to extreme audio choppiness. This can sometimes
be observed on some PC-type systems as well, albeit much less
prominently.

Relax the timing to the smallest value that makes it work again on the
RaspberryPi.
Issue #9: update notes about build environment

--- a/audio/pcaudiolib/patches/patch-configure.ac
+++ b/audio/pcaudiolib/patches/patch-configure.ac
@@ -1,10 +1,10 @@
-$NetBSD: patch-configure.ac,v 1.1 2024/02/29 14:15:41 bsiegert Exp $
+$NetBSD: patch-configure.ac,v 1.2 2024/12/26 11:36:55 wiz Exp $
 
 Add NetBSD native audio support
 
---- configure.ac.orig	2021-07-30 12:08:56.000000000 +0000
+--- configure.ac.orig	2024-12-12 14:16:30.000000000 +0000
 +++ configure.ac
-@@ -152,6 +152,29 @@ else
+@@ -142,6 +142,29 @@ else
  fi
  
  dnl ================================================================
@@ -34,9 +34,9 @@ Add NetBSD native audio support
  dnl Generate output.
  dnl ================================================================
  
-@@ -172,4 +195,5 @@ AC_MSG_NOTICE([
+@@ -162,4 +185,5 @@ AC_MSG_NOTICE([
  	QSA support:                   ${have_qsa}
- 	Coreaudio support:             ${have_coreaudio} 
+ 	Coreaudio support:             ${have_coreaudio}
  	OSS support:                   ${have_oss}
 +	NetBSD support:                ${have_netbsd}
  ])
