py-watchfiles: update to 1.0.3.
1.0.3

try to fix docs deploy

1.0.2

Fix PyPI asset upload from v1.0.1.

1.0.1

What's Changed

    Bump dawidd6/action-download-artifact from 2 to 6 in /.github/workflows by @dependabot in #311
    Bump pyo3 from 0.23.1 to 0.23.3 by @dependabot in #317
    bump to PyO3 0.23.3 by @davidhewitt in #316

--- a/misc/py-watchfiles/patches/patch-Cargo.toml
+++ b/misc/py-watchfiles/patches/patch-Cargo.toml
@@ -1,4 +1,4 @@
-$NetBSD: patch-Cargo.toml,v 1.2 2024/11/26 10:40:44 adam Exp $
+$NetBSD: patch-Cargo.toml,v 1.3 2024/12/26 12:01:54 wiz Exp $
 
 Depends on unpublished crates. Can't use cargo.mk to fetch it.
 
@@ -10,6 +10,6 @@ Depends on unpublished crates. Can't use cargo.mk to fetch it.
  crossbeam-channel = "0.5.12"
 -notify = {git = "https://github.com/samuelcolvin/notify.git", branch = "keep-io-error"}
 +notify = {path = "../notify-0f87ab12707d231fa44180454d59478d3992eb59/notify"}
- pyo3 = { version = "=0.23", features = ["extension-module", "generate-import-lib"] }
+ pyo3 = { version = "0.23.3", features = ["extension-module", "generate-import-lib"] }
  
  [lib]
