py-msgspec: update to 0.19.0.
Version 0.19.0 (2024-12-27)

    Improve JSON encoding performance by up to 40% (PR #647).
    Ensure tuple and frozenset default values are treated identically whether specified by value or default_factory (PR #653).
    Fix memory leak of match_args in StructConfig object (PR #684).
    Fix memory leak in Raw.copy() (PR #709).
    Update decode signatures for PEP 688 (PR #740).
    Generate __replace__ method on Struct types, for use with copy.replace (PR #747).
    Fix incorrect decoding of certain > 64 bit integers (PR #751).
    Call __post_init__ when converting from an object to a Struct (PR #752).
    BREAKING: Expand buffer when encode_into is passed a buffer smaller than offset (PR #753).
    Support Raw objects as inputs to convert (PR #754).
    Error nicely when a dataclass type (instead of an instance) is passed to encode (PR #755).
    Drop support for Python 3.8 (PR #756, PR #763).
    Add support for Python 3.13 (PR #711).
    Remove deprecated from_builtins (PR #761).
    Support encoding any Enum type whose .value is a supported type (PR #757).
    Don’t fail eagerly when processing generic types with unsupported __parameters__ (PR #772).
    Use eval_type_backport to backport type annotations to Python 3.9 (PR #773).

--- a/devel/py-msgspec/Makefile
+++ b/devel/py-msgspec/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.3 2024/11/26 12:45:44 nia Exp $
+# $NetBSD: Makefile,v 1.4 2024/12/27 22:45:50 wiz Exp $
 
-DISTNAME=	msgspec-0.18.6
+DISTNAME=	msgspec-0.19.0
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	devel python
 MASTER_SITES=	${MASTER_SITE_PYPI:=m/msgspec/}
@@ -13,9 +13,6 @@ LICENSE=	modified-bsd
 TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools-[0-9]*:../../devel/py-setuptools
 DEPENDS+=	${PYPKGPREFIX}-yaml-[0-9]*:../../textproc/py-yaml
 DEPENDS+=	${PYPKGPREFIX}-tomli_w-[0-9]*:../../textproc/py-tomli_w
-
-# Uses deprecated internal APIs like _PyUnicode_EQ
-PYTHON_VERSIONS_ACCEPTED=	312 311 310
 
 .include "../../lang/python/pyversion.mk"
 
