--- a/mail/fetchmail/Makefile
+++ b/mail/fetchmail/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.209 2023/10/24 22:09:43 wiz Exp $
+# $NetBSD: Makefile,v 1.210 2024/12/28 22:09:58 triaxx Exp $
 
 # Note to updaters: mail/fetchmailconf reaches over here, make sure it builds.
-DISTNAME=	fetchmail-6.4.35
-PKGREVISION=	2
+DISTNAME=	fetchmail-6.5.1
 CATEGORIES=	mail
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=fetchmail/}
 EXTRACT_SUFX=	.tar.xz
