--- a/graphics/gimp/Makefile
+++ b/graphics/gimp/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.406 2024/12/27 08:19:55 wiz Exp $
+# $NetBSD: Makefile,v 1.407 2024/12/29 10:23:26 wiz Exp $
 
 DISTNAME=	gimp-2.10.38
 PKGREVISION=	11
@@ -32,6 +32,7 @@ GNU_CONFIGURE=		yes
 CONFIGURE_ARGS+=	--disable-alsatest
 CONFIGURE_ARGS+=	--disable-glibtest
 CONFIGURE_ARGS+=	--disable-gtktest
+CONFIGURE_ARGS+=	--enable-vector-icons
 CONFIGURE_ARGS+=	--sysconfdir=${PKG_SYSCONFDIR}
 CONFIGURE_ARGS+=	--without-linux-input
 CONFIGURE_ARGS+=	--without-gs
