(textproc/R-rmarkdown) Updated 2.19 to 2.29
rmarkdown 2.29
================================================================================

- `find_external_resources()` now correctly detects knitr child
  document provided with option like `child = c("child.Rmd")` (thanks,
  @rempsyc, #2574).

- `knit_params_ask()` uses a `select` input for parameters which allow
  multiple selected values. Previously, a `radio` input was
  incorrectly used when the parameter had a small number of choices.

    ```yaml
    params:
        primaries:
            choices: ["red", "yellow", "blue"]
            multiple: true
    ```

    When `multiple` is not enabled, parameter configuration still uses
    `radio` when there are fewer than five choices.

    The `input` parameter field can still be used to force the
    configuration control.

    ```yaml
    params:
        grade:
            input: radio
            choices: ["A", "B", "C", "D", "F"]
    ```


rmarkdown 2.28
================================================================================

- Add classes `odd`, `even`, and `header` back to table rows for
  Pandoc >= 3.2.1, so tables can be styled properly (thanks,
  @therealgenna, #2567).

- `beamer_presentation` support handling latex dependencies via the
  new `extra_dependencies` argument and declarations within chunks
  (e.g., `knitr::asis_output("", meta =
  list(rmarkdown::latex_dependency("longtable")))`) (thanks, @cderv,
  @atusy, #2478).


rmarkdown 2.27
================================================================================

- Provide a global option `rmarkdown.files.suffix` to configure the
  suffix of the directory for auxiliary files (thanks,
  @certara-tzweers, #2550). By default, this suffix is `_files`, which
  can cause HTML output files to be deleted automatically on Microsoft
  OneDrive or Google Drive. If that is the case for you, you may set a
  different suffix in your `.Rprofile`, e.g.,
  `options(rmarkdown.files.suffix = "_rmdfiles")

--- a/textproc/R-rmarkdown/Makefile
+++ b/textproc/R-rmarkdown/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.6 2022/12/18 04:44:47 mef Exp $
+# $NetBSD: Makefile,v 1.7 2025/01/01 02:13:05 mef Exp $
 
 R_PKGNAME=	rmarkdown
-R_PKGVER=	2.19
+R_PKGVER=	2.29
 CATEGORIES=	textproc
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
@@ -21,9 +21,12 @@ DEPENDS+=	R-tinytex-[0-9]*:../../print/R-tinytex
 DEPENDS+=	R-withr>=2.4.2:../../devel/R-withr
 DEPENDS+=	R-jquerylib-[0-9]*:../../www/R-jquerylib
 DEPENDS+=	R-bslib>=0.2.5.1:../../www/R-bslib
+DEPENDS+=	R-fontawesome-[0-9]*:../../textproc/R-fontawesome
 
 # Packages suggested but not available:
-#  'dygraphs', 'rsconnect', 'katex', 'tufte'
+#   'dygraphs', 'rsconnect', 'katex', 'cleanrmd', 'xml2'
+
+# Package required and available but unsuitable version: 'fontawesome'
 
 TEST_DEPENDS+=	R-base64enc-[0-9]*:../../converters/R-base64enc
 TEST_DEPENDS+=	R-fs-[0-9]*:../../devel/R-fs
