devel/ruby-io-console: restrict Ruby's version
Restrict Ruby's version (not for Ruby 3.4) since Ruby 3.4.1 has this gem of
the same version.

--- a/devel/ruby-io-console/Makefile
+++ b/devel/ruby-io-console/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.12 2024/12/08 16:40:00 taca Exp $
+# $NetBSD: Makefile,v 1.13 2025/01/02 06:25:33 taca Exp $
 
 DISTNAME=	io-console-0.8.0
 CATEGORIES=	devel
@@ -7,6 +7,9 @@ MAINTAINER=	wen@NetBSD.org
 HOMEPAGE=	https://rubygems.org/gems/io-console/
 COMMENT=	Add console capabilities to IO instances
 LICENSE=	2-clause-bsd OR ruby-license
+
+# Ruby 3.4.1 has io-console 0.8.0 gem.
+RUBY_VERSIONS_ACCEPTED=	31 32 33
 
 .include "../../lang/ruby/gem.mk"
 .include "../../mk/bsd.pkg.mk"
