lang/ruby34: add package version 3.4.1.
Add latest release of Ruby Programming Language version 3.4.1.

Ruby is an interpreted object-oriented programming language often used for
web development. It also offers many scripting features to process plain
text and serialized files, or manage system tasks.  It is simple,
straightforward, and extensible.

Features of Ruby are shown below.
  + Simple Syntax
  + *Normal* Object-Oriented features (ex. class, method calls)
  + *Advanced* Object-Oriented features (ex. Mix-in, Singleton-method)
  + Operator Overloading
  + Exception Handling
  + Iterators and Closures
  + Garbage Collection
  + Dynamic Loading of Object files (on some architecture)
  + Highly Portable (works on many UNIX machines, and on Windows, Mac, etc.)

Ruby 3.4 introduces a number of new features and performance improvements,
here are some of them:
  * Prsim parser (as a default gem).
  * Performance: YJIT: Verious improvements including performance.
  * Performance: RJIT: Experital pure-Ruby JIT compiler replace MJIT.
  * M:N thread scheduler.
  * Retirement of ext/readline.

--- a/lang/ruby/Makefile.common
+++ b/lang/ruby/Makefile.common
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile.common,v 1.51 2024/04/28 13:03:00 wiz Exp $
+# $NetBSD: Makefile.common,v 1.52 2025/01/02 06:51:04 taca Exp $
 #
 # Ruby base distribution common definition
 #
@@ -10,6 +10,7 @@
 # used by lang/ruby32/Makefile
 # used by lang/ruby32-base/Makefile
 # used by lang/ruby33/Makefile
+# used by lang/ruby34/Makefile
 #
 #
 # RUBY_EXTNAME
