audio/pavucontrol: Update to 6.1
Changelog:
Fri Aug 01 2024:

Version 6.1 released. Changes:

  * Fix translations not being correctly picked up.
  * Fix bug where cards don't go away when unplugged.
  * Fix app naming in desktop file (Volume Control).
  * Fix Bluetooth codec selection alignment.
  * Update Swedish translation.

Tue May 21 2024:

Version 6.0 released. Changes:

  * Migrate from Gtk 3 to 4.
  * Embed UI resources in executable.
  * Rename "Set as fallback" to "Default" for better legibility.
  * Support 144 Hz monitors with level bars.
  * App icons will fallback to generic rather than missing image, and this will
    be more common with Gtk 4.
  * Lots of translation updates.
  * Drop autotools build in favour of meson.
  * Make libcanberra dependency optional.

Sun Aug 15 2021:

Version 5.0 released. Changes:

  * Support for switching Bluetooth codecs (new in PulseAudio 15.0).
  * Support for locking card profiles (new in PulseAudio 15.0). Locking a
    profile prevents PulseAudio from automatically switching away from that
    profile on plug/unplug events.
  * New translations: Asturian, Basque, Belarusian, Galician, Hebrew, Kazakh,
    Norwegian Bokm?l, Sinhala, Slovenian
  * Updated translations: Catalan, Chinese (Simplified), Chinese (Traditional),
    Croatian, Danish, Dutch, Finnish, French, German, Hungarian, Italian,
    Japanese, Korean, Lithuanian, Norwegian Nynorsk, Polish, Portugese,
    Portugese (Brazil), Slovak, Spanish, Swedish, Turkish, Ukrainian.
  * Some bug fixes.
  * New dependency: json-glib.
  * Minimum gtkmm version bumped to 3.22.

--- a/audio/pavucontrol/Makefile
+++ b/audio/pavucontrol/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.104 2024/12/27 08:19:22 wiz Exp $
+# $NetBSD: Makefile,v 1.105 2025/01/02 13:51:21 ryoon Exp $
 #
 
-DISTNAME=	pavucontrol-4.0
-PKGREVISION=	39
+DISTNAME=	pavucontrol-6.1
 CATEGORIES=	audio
 MASTER_SITES=	http://freedesktop.org/software/pulseaudio/pavucontrol/
 EXTRACT_SUFX=	.tar.xz
@@ -12,17 +11,18 @@ HOMEPAGE=	https://freedesktop.org/software/pulseaudio/pavucontrol/
 COMMENT=	Volume control tool ("mixer") for the PulseAudio sound server
 LICENSE=	gnu-gpl-v2
 
-GNU_CONFIGURE=	yes
 USE_LANGUAGES=	c c++11
 USE_TOOLS+=	pkg-config gmake intltool perl msgfmt
 
-CONFIGURE_ARGS+=	--disable-lynx
+MESON_ARGS+=	-Dlynx=false
 
 .include "../../audio/libcanberra/buildlink3.mk"
 .include "../../audio/pulseaudio/buildlink3.mk"
 .include "../../converters/libiconv/buildlink3.mk"
 .include "../../devel/libsigc++/buildlink3.mk"
 .include "../../sysutils/desktop-file-utils/desktopdb.mk"
-.include "../../x11/gtk3/buildlink3.mk"
-.include "../../x11/gtkmm3/buildlink3.mk"
+.include "../../textproc/json-glib/buildlink3.mk"
+.include "../../x11/gtkmm4/buildlink3.mk"
+.include "../../devel/meson/build.mk"
+.include "../../devel/gettext-tools/msgfmt-desktop.mk"
 .include "../../mk/bsd.pkg.mk"
